--- a/app/views/layouts/layout.html
+++ b/app/views/layouts/layout.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/styleShared.css">
     <link rel="stylesheet" href="/static/css/styleNavbar.css"> 
+    <link rel="stylesheet" href="/static/css/styleMinhasSolicitacoes.css"> 
 
     <script src="https://kit.fontawesome.com/d881912698.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery/dist/jquery.js') }}"></script> 
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
     <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/styleShared.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styleNavBar.css') }}">  -->
     
