tela de nova de solicitação

--- a/app/static/css/styleNavbar.css
+++ b/app/static/css/styleNavbar.css
@@ -62,7 +62,7 @@ header {
 
 .login-button button:hover {
     transition: 0.2s;
-    background-color: #245fac;;
+    background-color: #245fac;
 }
 
 .login-button button a {
