--- a/app/views/layouts/layout.html
+++ b/app/views/layouts/layout.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="/static/css/styleNavbar.css"> 
     <link rel="stylesheet" href="/static/css/styleMinhasSolicitacoes.css"> 
     <link rel="stylesheet" href="/static/css/styleCriarSolicitacao.css"> 
-
+    <link rel="stylesheet" href="/static/css/styleTransparencia.css"> 
 
     <script src="https://kit.fontawesome.com/d881912698.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery/dist/jquery.js') }}"></script> 
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
     <!-- <script type="text/javascript" src="{{ url_for('static', filename='js/cep.js') }}"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/mapa.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
     
     <title>SolicityPVH</title>
