--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -11,14 +11,14 @@
         <div class="card">
             <h2>Transparência de Solicitações</h2>
             <p class="phome">Consulte todas as solicitações realizadas e acompanhe o status em tempo real.</p>
-            <a href="/solicitacoes/acompanhar" class="btn-card">Acessar</a>
+            <a href="/solicitacao/acompanhar" class="btn-card">Acessar</a>
         </div>
 
         <!-- Card 2 -->
         <div class="card">
             <h2>Criar Solicitação</h2>
             <p class="phome">Registre uma nova solicitação de forma rápida e simples.</p>
-            <a href="/solicitacoes/criar" class="btn-card">Registrar</a>
+            <a href="/solicitacao/criar" class="btn-card">Registrar</a>
         </div>
 
         <!-- Card 3 -->
