--- a/app/views/layouts/layout.html
+++ b/app/views/layouts/layout.html
@@ -33,14 +33,14 @@
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"><a href="/" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="/solicitacao/minhas" class="nav-link">Acompanhar Solicitações</a></li>
+                    <li class="nav-item"><a href="/solicitacao/acompanhar" class="nav-link">Acompanhar Solicitações</a></li>
                     <li class="nav-item"><a href="/solicitacao/criar" class="nav-link">Criar Solicitação</a></li>
                     <li class="nav-item"><a href="/transparencia" class="nav-link">Transparência</a></li>
                 </ul>
             </div>
 
             <div class="login-button">
-                <button><a href="#">Login</a></button>
+                <button><a href="/autenticacao">Login</a></button>
             </div>
 
             <div class="mobile-menu-icon">
@@ -49,13 +49,13 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"><a href="/" class="nav-link">Início</a></li>
-                <li class="nav-item"><a href="/solicitacao/minhas" class="nav-link">Acompanhar Solicitações</a></li>
+                <li class="nav-item"><a href="/solicitacao/acompanhar" class="nav-link">Acompanhar Solicitações</a></li>
                 <li class="nav-item"><a href="/solicitacao/criar" class="nav-link">Criar Solicitação</a></li>
                 <li class="nav-item"><a href="/transparencia" class="nav-link">Transparência</a></li>
             </ul>
 
             <div class="login-button">
-                <button><a href="/autenticacao.index">Login</a></button>
+                <button><a href="/autenticacao">Login</a></button>
             </div>
         </div>
     </header>
