--- a/app/views/layouts/layout.html
+++ b/app/views/layouts/layout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/styleShared.css">
+    <link rel="stylesheet" href="/static/css/styleChatbot.css">
     <link rel="stylesheet" href="/static/css/styleHome.css">
     <link rel="stylesheet" href="/static/css/styleNavbar.css"> 
     <link rel="stylesheet" href="/static/css/styleMinhasSolicitacoes.css"> 
