--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -31,29 +31,10 @@
   </div>
   </main>
 
-  <div id="ze-chatbot-container">
-        <div id="ze-chatbot-header">
-            <img id="ze-avatar" src="static/img/ze_avatar.png" alt="Zé da Obra">
-            <div id="ze-info">
-                <p class="ze-saudacao">Olá! Eu sou o Zé da Obra!</p>
-                <p class="ze-status" data-status="initial">Clique para começar o chat.</p>
-            </div>
-            <button id="close-chat-btn" style="display: none;"><i class="fa-solid fa-xmark"></i></button>
-        </div>
-        
-        <div id="ze-chat-window" style="display: none;">
-            <div id="ze-chat-messages">
-                </div>
-            
-            <div id="ze-chat-input-area">
-                <input type="text" id="ze-user-input" placeholder="Digite seu CPF...">
-                <button id="ze-send-btn"><i class="fa-solid fa-paper-plane"></i></button>
-            </div>
-        </div>
-    </div>
+  
 {% endblock %}
 
-{% block scripts %}
+<!-- {% block scripts %}
     <script text="type/javascript">
         // =======================================================
         //              JAVASCRIPT (Menu e Chatbot IA)
@@ -309,4 +290,4 @@
             // --- FIM EVENTOS DO ZÉ DA OBRA ---
         })
     </script>
-    {% endblock %}
+{% endblock %} -->
