--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -4,13 +4,13 @@
 <div class="content-wrapper">
   <main class="container">
       <h1>Bem-vindo ao Solicity</h1>
-      <p class="phome">Seu portal para solicitar com uma nova Porto Velho</p>
+      <p class="phome">Seu portal para solicitar uma nova Porto Velho</p>
 
       <div class="cards-container">
           <!-- Card 1 -->
           <div class="card">
-              <h2>Transparência de Solicitações</h2>
-              <p class="phome">Consulte todas as solicitações realizadas e acompanhe o status em tempo real.</p>
+              <h2>Acompanhe suas Solicitações</h2>
+              <p class="phome">Consulte todas as suas solicitações realizadas e acompanhe o status em tempo real.</p>
               <a href="/solicitacao/acompanhar" class="btn-card">Acessar</a>
           </div>
 
