--- a/app/views/transparencia/dashboard.html
+++ b/app/views/transparencia/dashboard.html
@@ -48,13 +48,14 @@
 <div class="row grafico-mapa">
     <div class="mapa-container">
         <div class="mapa-cidade w-100">
+            <p class="titulo-graficos">Solicitações por Bairro</p>
             <div id="mapa"></div>
             <div class="tooltip" id="tooltip"></div>
         </div>
 
         <div class="demais-info">
             <div class="categoria-solicitacao-bairro">
-                <p class="titulo-graficos">Categoria das Solicitações</p>
+                <p class="titulo-graficos">Categoria das Solicitações por Bairro</p>
                 <div class="grafico-barra-categoria"></div>
             </div>
         </div>
@@ -77,11 +78,8 @@
             type: 'donut',
             width: 450,
             height: 450,
-            // A legenda será mostrada, então removemos 'legend: { show: false }'
           },
-          // Rótulos para a legenda: Alta (vermelho), Média (amarelo), Baixa (verde)
           labels: ['Alta', 'Média', 'Baixa'],
-          // Cores ajustadas: Vermelho (Alta), Amarelo (Média), Verde (Baixa)
           colors: ['#FF5370', '#FFC107', '#1ec06f'], 
           responsive: [{
             breakpoint: 480,
@@ -96,17 +94,23 @@
         // Gráfico de Barras: Tipos de Solicitações no Ano
         var options = {
           series: [{
-            name: 'Tapar Buraco',
+            name: 'Pavimentação asfáltica',
             data: [44, 55, 41, 67, 22, 43, 0, 0, 0, 0, 0, 0]
           }, {
-            name: 'Recolocar Tampas em Bueiros',
+            name: 'Recapeamento',
             data: [13, 23, 20, 8, 13, 27, 0, 0, 0, 0, 0, 0]
           }, {
-            name: 'Recapiar Ruas',
+            name: 'Tapa Buraco',
             data: [11, 17, 15, 15, 21, 14, 0, 0, 0, 0, 0, 0]
           }, {
-            name: 'Outros',
+            name: 'Reposição de Tampa de Bueiro de Metal',
             data: [21, 7, 25, 13, 22, 8, 0, 0, 0, 0, 0, 0]
+          }, {
+            name: 'Reposição de Boca de Lobo',
+            data: [44, 55, 41, 67, 22, 43, 0, 0, 0, 0, 0, 0]
+          },{
+            name: 'Manutenção de Boca de Lobo',
+            data: [44, 55, 41, 67, 22, 43, 0, 0, 0, 0, 0, 0]
           }],
           chart: {
             type: 'bar',
